fix dropdown z-index - closes some issue

--- a/public/stylesheets/board-3d.css
+++ b/public/stylesheets/board-3d.css
@@ -17,6 +17,9 @@
 .is3d piece.dragging {
   z-index: 70!important;
 }
+#top .dropdown {
+  z-index: 71;
+}
 .is3d .is2d piece {
   /* copy of board.css to override miniboards */
   left: 0;
